project(tests)
add_subdirectory(lib)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

add_executable(test_ctci_ransom_note test_ctci_ransom_note.cpp)

target_link_libraries(test_ctci_ransom_note ctci_ransom_note_lib)
target_link_libraries(test_ctci_ransom_note gtest gtest_main)

add_executable(test_sherlock_and_anagrams test_sherlock_and_anagrams.cpp)

target_link_libraries(test_sherlock_and_anagrams sherlock_and_anagrams_lib)
target_link_libraries(test_sherlock_and_anagrams gtest gtest_main)

add_executable(test_count_triplets_1 test_count_triplets_1.cpp)

target_link_libraries(test_count_triplets_1 count_triplets_1_lib)
target_link_libraries(test_count_triplets_1 gtest gtest_main)

configure_file(test_count_triplets_1_input_03.txt test_count_triplets_1_input_03.txt COPYONLY)
configure_file(test_count_triplets_1_input_06.txt test_count_triplets_1_input_06.txt COPYONLY)

add_executable(test_frequency_queries test_frequency_queries.cpp)

target_link_libraries(test_frequency_queries frequency_queries_lib)
target_link_libraries(test_frequency_queries gtest gtest_main)